# eu-ai-act-hitl-monitor-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  validate-skills.yml  validate.yml
docs/: contracts.md  versioning.md
eu-ai-act-hitl-oversight-skill/: SKILL.md
eu-ai-act-hitl-oversight-skill/agents/: openai.yaml
eu-ai-act-hitl-oversight-skill/references/: handover-schema.md  hitl-patterns.md  legal-controls.md  (+1 more)
evals/: eval-cases.md  forward-test-protocol.md  scorecard.md
examples/: README.md  auth-permissions-change-report.example.md  bug-fix-handover-packet.example.json  bug-fix-report.example.md  bug-fix-review-decision.example.json  database-migration-report.example.md  dependency-upgrade-report.example.md  example-prompts.md  feature-implementation-handover-packet.example.json  feature-implementation-report.example.md  feature-implementation-review-decision.example.json  handover-packet.example.json  handover-report.template.md  interception-policy.example.json  negative-handover-examples.md  payment-logic-change-report.example.md  review-decision.example.json  risky-refactor-report.example.md  scenario-map.md
schemas/: handover-packet.schema.json  interception-policy.schema.json  review-decision.schema.json
scripts/: _validation.py  validate_agent_skills.py  validate_examples.py  validate_handover_packet.py  validate_interception_policy.py  validate_repo.py  validate_review_decision.py  validate_skill.py  validate_versions.py
(+10 files in other folders)
